# jarvis

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/bmad/bmm/workflows/: yolo.md
_bmad-output/analysis/: brainstorming-session-2026-01-03.md
_bmad-output/implementation-artifacts/: sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-03.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
brain/: __init__.py  intent.py  llm.py
brain/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py  xai.py
core/: __init__.py  config.py  context.py  jarvis.py
docs/: api-reference.md  architecture.md  home-automation.md  index.md  llm-providers.md  project-context.md  project-scan-report.json  skills-guide.md
home/: __init__.py  automation.py
skills/: __init__.py  argus_camera_skill.py  base.py  calendar_skill.py  reminder_skill.py  time_skill.py  weather_skill.py
speech/: __init__.py  recognition.py  synthesis.py  wakeword.py
tests/: test_context.py  test_intent.py
utils/: __init__.py  audio.py
vision/: __init__.py  processor.py
web/: __init__.py  server.py
web/templates/: core.html  index.html
