[project]
name = "jarvis"
version = "0.1.0"
description = "A real-life J.A.R.V.I.S. AI assistant with voice, vision, and home automation"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",

    # Speech Recognition (Whisper)
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",

    # Wake Word Detection
    "openwakeword>=0.6",

    # Text-to-Speech
    "piper-tts>=1.2",

    # LLM (Ollama for local, httpx for cloud APIs)
    "ollama>=0.3",

    # Vision
    "opencv-python>=4.9",
    "ultralytics>=8.0",  # YOLO

    # Home Automation
    "aiomqtt>=2.0",
    "aiohttp>=3.9",  # Home Assistant API

    # Web UI
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",

    # Async utilities
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
jarvis = "core.jarvis:main"
jarvis-web = "web.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "speech", "brain", "vision", "home", "skills", "utils", "web"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
